# seldom

./: .gitignore  README.md  seldom.cabal  sources.txt
src/Seldom/: Request.hs
src/Seldom/Internal/: Cookie.hs  Parsing.hs  Request.hs
src/Seldom/Internal/Parsing/: FastSet.hs
tests/: Main.hs
