name:                seldom
version:             0.0.0.1
synopsis:            HTTP server built on pipes
description:         HTTP server built on pipes
homepage:            https://github.com/k0001/seldom.git
license:             BSD3
license-file:        LICENSE
author:              Renzo Carbonara
maintainer:          renzocarbonaraλgmail.com
copyright:           Copyright (c) 2013 Renzo Carbonara
category:            Network
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md

library
  hs-source-dirs:    src
  exposed-modules:   Seldom.Internal.Parsing
  other-modules:     Seldom.Internal.Parsing.FastSet
                     Seldom.Internal.Cookie
  build-depends:     base             (>=4.5     && <5.0)
                   , attoparsec       (>=0.10    && <0.11)
                   , blaze-builder    (>=0.3     && <0.4)
                   , bytestring       (>=0.9.2.1 && <0.11)
                   , case-insensitive (>=0.3     && <1.1)
                   , containers       (>=0.4     && <0.5)
                   , pipes            (>=3.2     && <3.3)
                   , pipes-attoparsec (>=0.2     && <0.3)
                   , pipes-network    (>=0.1.0.1 && <0.3)
                   , pipes-parse      (>=1.0     && <1.1)
                   , time             (>=1.4     && <1.5)

test-suite seldom-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:       seldom
                     , base
                     , text
                     , bytestring
                     , QuickCheck                 >= 2.5
                     , test-framework             >= 0.7
                     , test-framework-quickcheck2 >= 0.3

